# rag-n-roll-ai-video

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.template
components/: main_col.py  side_col.py
finetune_notebook/: notebook_app.ipynb
scripts/: populate_kb.py
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
utils/: gen_simple_component.py  snowflake.py  styles.py  system_prompts.py  video_details.py
